Revision history for PDF-Native

{{$NEXT}}

0.1.11  2024-10-28T06:44:36+13:00
  - Fixes to indirect object 'endstream' parsing.

0.1.10  2024-07-31T13:55:50+12:00
  - Fix memory leak in dictionary parse

0.1.9  2024-07-31T09:15:11+12:00
  - Fixes for MSVE and MacOS compilation

0.1.8  2024-07-31T05:51:38+12:00
   - Ensure comments are written at the end of a line in content stream

0.1.7  2024-07-30T14:45:58+12:00
   - Add COSComment node. Used for output only, at this stage.
   - Add CosNode.write-buf() method. This is used to accurately presize
     output write buffers.

0.1.6  2024-07-28T10:37:54+12:00
   - Fix Stream AST, broken in last release

0.1.5  2024-07-26T06:37:12+12:00
   - Implement COSOp and COSInlineImage coercements
   - Fix dict reference counting in streams and inline images

0.1.4  2024-07-25T07:32:40+12:00
   - Fix validation of BDC & DP operators. Second argument
     can be a dictionary or a name.

0.1.3  2024-07-25T06:30:14+12:00
   - Add content operator validation

0.1.2  2024-07-19T09:33:05+12:00
   - Add COSContent for content stream parsing and serialization

0.1.1  2024-07-12T08:26:39+12:00
   - Remove disused PDF::Native::Parser"

0.1.0  2024-07-12T07:56:01+12:00
   - Introduce PDF::Native::COS as a set of objects with a parser and
     serialization methods.

0.0.5  2024-05-06T07:31:25+12:00
    - Fix printing of wide integers in pdf_write_int()

0.0.4  2023-10-23T09:25:09+13:00
    - Also widen predictor rows parameter; from uint_16 to size_t.

0.0.3  2023-10-22T08:47:19+13:00
    - Writer integers as 64bit / 18 digits (was 32 bit / 8 digits)

0.0.2  2022-06-06T09:11:51+12:00
    - Fix writing of Name Objects.
    - Add subroutines unpack-xref-stream() and pack-xref-stream() to
      PDF::Native::Buf

0.0.1  2022-06-02T10:21:42+12:00
    - Initial version